--- a/Extra Pages/Location Page/style.css
+++ b/Extra Pages/Location Page/style.css
@@ -137,9 +137,10 @@ nav {
 /* FOOTER */
 
 footer {
-    height: 150px;
+    height: auto;
     width: 100%;
     background-color: black;
+    padding: 20px 0 75px 0;
 }
 
 #inner-4 {
@@ -193,7 +194,7 @@ a:link {
 
 @media (max-width: 850px) {
     .description h3 {
-      font-size: 1.3em;
+      font-size: 1.2em;
     }
 
 }
@@ -214,5 +215,9 @@ a:link {
 
     .container-2 {
         margin-bottom: 150px;
+    }
+
+    .description h3 {
+        font-size: 1em;
     }
 }
