--- a/Extra Pages/Menu Page/style.css
+++ b/Extra Pages/Menu Page/style.css
@@ -144,10 +144,11 @@ nav {
 /* FOOTER */
 
 footer {
-    height: 150px;
     width: 100%;
     background-color: black;
     text-align: center;
+    height: auto;
+    padding: 20px 0 75px 0;
 }
 
 #inner-4 {
