--- a/Extra Pages/Specials Page/style.css
+++ b/Extra Pages/Specials Page/style.css
@@ -147,9 +147,10 @@ nav {
 /* FOOTER */
 
 footer {
-    height: 150px;
+    height: auto;
     width: 100%;
     background-color: black;
+    padding: 20px 0 75px 0;
 }
 
 #inner-4 {
