--- a/style.css
+++ b/style.css
@@ -465,9 +465,10 @@ a:link {
 /* CONTAINER 5 */
 
 footer {
-    height: 150px;
+    height: auto;
     width: 100%;
     background-color: black;
+    padding: 20px 0 75px 0;
 }
 
 #inner-4 {
